# reasoning

./: CONTRIBUTING.md  README.md  miner.py  protocol.py  pyproject.toml  setup.py  validator.py
docs/: basic_installation.md  miner.md
neurons/: miner.py  validator.py
reasoning/: forward.py  main.py  protocol.py  reward.py  search_template.py
reasoning/api/: dummy.py  get_query_axons.py
reasoning/base/: miner.py  neuron.py  validator.py
reasoning/puzzle/: puzzle.py  verifier.py
reasoning/search/: algorithms.py  node.py
reasoning/utils/: config.py
reasoning/validator/: __init__.py  forward.py  main.py  reward.py  search.py
reasoning/validator/puzzle/: generator.py  verifier.py
reasoning/validator/search/: algorithms.py
scripts/: install_staging.sh
src/reasoning/puzzle/: __init__.py  generator.py  puzzle.py  reward.py
src/reasoning/search/: __init__.py  problem.py
tests/: helpers.py  test_mock.py  test_puzzle.py  test_puzzle_generator.py  test_puzzle_verifier.py  test_reward.py
